Assets/CSS/index.css
@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');

* {
    box-sizing: border-box;
}

html {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 25pt;
    scroll-behavior: smooth;
}

body {
    background-image: url("../../Images/white_flowers.png"), linear-gradient(95deg, #ffbb00, white);
    background-repeat:repeat, no-repeat;
    background-size: 50%, cover;
    background-color: #ffc000;
    border: 3vmin double orange;
    display: flex;
    flex-direction: column; 
}

.modal {
    display: none;
    position: absolute;
    align-self: center;
    background-color: rgb(255, 247, 232);
    box-shadow: 5px 5px 10px brown;
    width: 90vw;
    height: 95vh;
    padding: 5vmin;
    overflow: hidden;
}

.modal-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.close {
    font-size: 2rem;
    cursor: pointer;
    align-self: flex-end;
}

.close:hover {
    color: orange;
}

.close, .modal-content p {
    color:rgb(209, 102, 1);
    font-weight: bold;
}

.spring-rolls {
    width: 30vw;
    height: auto;
    transform: rotate(-90deg);
    border-radius: 10px;
    margin: 0;
    margin-top: -4vw;
}

.modal-content h1 {
    font-size: 7vmin;
    background-color: transparent;
    text-shadow: 0.25vmin 0.1vmin 3px rgb(216, 104, 0);
    padding: 0;
    margin: 0;
    margin-top: -0.5rem;
}

.modal-content p {
    margin: 0;
    margin-top: -4vw;
}

nav {
    position: sticky;
    margin-top: 3vmax;
    top: 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-self: center;
    width: 93vw;
    height: 10vh;
    background-color: rgb(255, 136, 0);
    box-shadow: 5px 5px 10px brown;
}

.navigation {
    display: flex;
    flex-direction: row;
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.navigation > li {
    margin: 0 1rem;
    overflow: hidden;
}

.links {
    color: white;
    text-decoration: none;
    font-weight: bold;
}

.links:hover {
    background-image: radial-gradient(rgba(255, 255, 255, 0.8), transparent);
    text-decoration: underline double;
    border-radius: 10px;
}

.hamburger-box {
    height: 100%;
    width: 30px;
    margin-left: 20px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    display: none;
}

#menu-toggle {
    display: none;
}

.hamburger,
.hamburger::before,
.hamburger::after {
    position: absolute;
    display: block;
    height: 4px;
    width: 30px;
    border-radius: 2px;
    background-color: white;
    transition: transform 0.5s cubic-bezier(0.23, 1, 0.320, 1);
}

.hamburger::before {
    content: '';
    margin-top: -8px;
}

.hamburger::after {
    content: '';
    margin-top: 8px;
}

#menu-toggle:checked + .hamburger-box .hamburger::before {
    margin-top: 0;
    transform: rotate(405deg);
}

#menu-toggle:checked + .hamburger-box .hamburger {
    background-color: rgba(255, 255, 255, 0);
}

#menu-toggle:checked + .hamburger-box .hamburger::after {
    margin-top: 0;
    transform: rotate(-405deg);
}

.title-image {
    width: 95vmin;
    height: auto;
    border: 1vmin solid brown;
    box-shadow: 5px 5px 10px brown;
    align-self: center;
    margin-top: 15vmin;
}

main {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    width: 90%;
}

h1 {
    font-size: 5vmax;
    margin: 5vmax 0;
    text-align: center;
}

h2 {
    font-size: 3vmax;
    align-self: flex-start;
    margin: 0;
}

h1,
h2 {
    font-weight: bold;
    color: orange;
    padding: 3vmin;
    text-shadow: 0.5vmin 0.25vmin 3px rgb(216, 104, 0);
}

h1,
.text {
    background-color: rgba(255, 255, 255, 0.85);
    border-radius: 10px;
}

.text {
    color: rgb(216, 104, 0);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 2vmin;
    margin-bottom: 5vmax;
}

p {
    text-align: center;
    font-family: 'Handlee';
    font-size: 1rem;
}

.come {
    font-size: 1rem;
    font-weight: bold;
    color: orange;
    text-shadow: 2px 2px 3px rgb(216, 104, 0);
    letter-spacing: 0.5vmin;
}

.sub-hour {
    font-style: italic;
}

.schedule {  
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 35vmax;
    padding: 1rem;
    border-radius: 30px;
    flex: 1;
    background: #facc4f;
    border: 10px double orange;
    box-shadow: 0.25vmin 0.25vmin 1vmin #c59100;
}

.schedule p:first-of-type {
    font-weight: bold;
    font-size: 1.3rem;
    background-color: orange;
    border-radius: 10px;
}

.schedule p:first-of-type span {
    text-decoration: underline;
    color: white;
}

.group-image {
    display:inline-block;
}

.image {
    flex: 1;
    border-radius: 20px;
    width:65vmin;
    height: auto;
    box-shadow: 0.25vmin 0.25vmin 1vmin #5e4500;
}

.subheader {
    text-decoration: underline;
    font-weight: bold;
}

.spread {
    width: 90%;
    display: flex;
    flex-wrap: wrap;
    gap: 5vmax;
}

.row {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.weekday {
    padding-top: 1vmin;
    color: brown;
    font-size: 1rem;
    margin-top: 0.75rem;
}

.shift {
    font-style: italic;
    padding-left: 1.5rem;
    font-size: 0.75rem;
}

.time {
    text-align: right;
    font-size: 0.75rem;
}

.color {
    color: rgb(216, 104, 0);
}

.note {
    font-size: 0.75rem;
    font-style: italic;
    text-align: center;
}

.map-address {
    color: orange;
    font-weight: normal;
    text-align: center;
    padding:  4vmin;
    font-style: italic;
    text-decoration: underline;
    background-image:radial-gradient(rgb(250, 221, 168), white);
}

.map-address:hover {
    color: orangered;
    font-weight: bold;
}

iframe {
    margin-top: 1rem;
    border: 0.75vmin solid orange;
    width: min(23rem, 100%);
    height: 20rem;
}

.phone-number {
    font-size: 1rem;
    font-weight: bold;
    margin: 0.5rem;
}

.number {
    color: orange;
}

.phone-number,
.left-align {
    align-self: flex-start;
    margin-left: 10vmin;
}

.text > ul {
    margin: 0 20vmin;
    font-family: 'Handlee';
}

.uber {
    color: #01dd31;
    font-weight: bold;
}

.uber:hover {
    color: lime;
    text-decoration: none;
    font-style: italic;
}

.grub {
    color: orange;
    font-weight: bold;
}

.grub:hover {
    color: rgb(255, 217, 0);
    text-decoration: none;
    font-style: italic;
}

.detail {
    align-items: flex-start;
    padding: 10vmin;
}

details {
    margin-bottom: 3vmin;
    color: rgb(209, 102, 1);
}

details > p {
    color: white;
    background-color:rgb(209, 102, 1);
    padding: 1vmin;
    border-radius: 20px;
}

p span {
    font-weight: bold;
    color: rgb(253, 175, 74);
}

.protein-option {
    margin-left: 6vmin;
    color: white;
}

details > p > a {
    color: rgb(255, 217, 0);
}

details > p > a:hover {
    color: orange;
    text-decoration: none;
}

.copyright {
    font-size: 3vmin;
    background-color: orange;
    color: white;
    font-style: italic;
    text-align: center;
    margin: 4vmax 1vmin 1vmin;
}

@media (max-width: 1320px) {
    body {
        border: none;
    }
    .spring-rolls {
        width: 275px;
        height: auto;
        margin: 0;
    }
    .modal-content p {
        margin: 0;
    }
    nav {
        top: 0;
    }
    nav,
    #menu-toggle:checked ~ .navigation li {
        width: 100vw;
        height: 7vh;
    }
    .hamburger-box {
        display: flex;
    }
    .navigation {
        position: absolute;
        top: 0;
        margin-top: 67px;
        left: 0;
        flex-direction: column;
        width: 100%;
        justify-content: center;
        align-items: center;
    }
    #menu-toggle ~ .navigation li {
        height: 0;
        margin: 0;
        padding: 0;
        border: 0;
        transition: height 0.5s cubic-bezier(0.23, 1, 0.320, 1);
    }
    #menu-toggle:checked ~ .navigation li {
        height: 1.5em;
        border: 1px solid white;
        transition: height 0.5s cubic-bezier(0.23, 1, 0.320, 1);
    }
    .navigation > li {
        display: flex;
        justify-content: center;
        margin: 0;
        padding: 0.5em 0;
        width: 100%;
        color: white;
        background-color: rgb(255, 136, 0);
    }
    .navigation > li:not(:last-child) {
        border-bottom: 1px solid white;
    }
    main {
        width: 100%;
    }
    .text {
        padding: 0;
    }
    .text > ul {
        margin: 0 1rem;
    }
    h2 {
        text-shadow: none;
        font-size: 1.25rem;
        text-align: center;
    }
    p {
        margin: 10vmin;
    }
    .note {
        margin: 5vmin 0;
    }
    .box-image {
        padding: 0.5rem;
    }
    .spread,
    .box-image,
    .image {
        width: 100%;
    }
    .image {
        margin-top: 1rem;
    }
    .map-address {
        font-size: 0.9rem;
        line-height: 2rem;
        background-image: none;
    }
    details {
        padding-left: 1rem;
        font-size: 0.9rem;
    }
    details > p {
        margin: 0 0.5rem;
        padding: 0.5rem;
    }
    .copyright {
        font-size: 0.75rem;
    }
}

